--- a/scss/abstracts/variables.scss
+++ b/scss/abstracts/variables.scss
@@ -6,3 +6,4 @@ $border-radius: 5px;
 $border-color-active: #134880;
 $border-color-inactive: #dddddd;
 $footer-header-background: #dddddd;
+$container-width: 940px;
