--- a/scss/components/slider.scss
+++ b/scss/components/slider.scss
@@ -2,7 +2,8 @@
 @import "../abstracts/mixins.scss";
 
 .container__images__top,
-.container__images__bottom__imagesContainer {
+.container__images__bottom__imagesContainer,
+.container__images__bottom {
   position: relative;
   display: flex;
   justify-content: flex-end;
@@ -40,12 +41,10 @@
     }
 
     &__bottom {
-      display: flex;
-      margin-top: 5px;
+      margin-top: 10px;
       max-height: $image-height;
 
       &__imagesContainer {
-        width: 80%;
         margin-left: 5px;
 
         img {
@@ -54,11 +53,10 @@
       }
 
       &__buttonContainer {
-        width: 100px;
         justify-content: flex-start;
         align-items: flex-end;
 
-        margin-left: auto;
+        padding-left: 100px;
 
         &__left {
           @include button--left();
