--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -4,8 +4,8 @@
   position: relative;
   bottom: 0;
   height: 100px;
-  width: calc(100% + 16px);
   background-color: $footer-header-background;
-  margin: 60px -8px -8px -8px;
+  margin: 60px -8px -8px auto;
   border-radius: 5px 5px 0 0;
+  width: $container-width;
 }
